--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
     
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+<Title>Origami Designs</Title>
+<style> </style>
   </head>
   <body>
-    
+ <h1>Origami Designs</hl>
+<br>
+ <h2><a href="about.html"> About Us, </a> 
+<a href="followus.html"> Follow Us </a> </h2>
+<br>
+<a target=”_blank”  href= "https://origami.me/camel/">
+<img src="C:\Users\sankk\Downloads\camel.png" width="400" height="400">
+</a>
+<br>
+<h2>Interesting Facts About Camels: </h2>
+<ul>
+<h3>
+<li> Camels eyes have three eyelids and two rows of eyelashes that prevent sand to enter their eyes.</li>
+<li>There are two types of camels: One humped or “dromedary” camels and two humped Bactrian camels. </li>
+<li>Camels can completely shut their nostrils during sandstorms. </li>
+</h3>
+</ul>
+<a target=”_blank”  href= "https://origami.me/panda/">
+<img src="C:\Users\sankk\Downloads\panda.png" width="400" height="400">
+</a>
+<br>
+<h2>Interesting Facts About Pandas: </h2>
+<ol>
+<h3>
+<li>They have great camouflage for their environment </li>
+<li>Pandas eat almost nothing but bamboo shoots and leaves. </li>
+<li>A baby panda is called a cub </li>
+</h3>
+</ol>   
   
 
 </body></html>
+
