--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </h3>
 </ul>
 <a target=”_blank”  href= "https://origami.me/panda/">
-<img src="C:\Users\sankk\Downloads\panda.png" width="400" height="400">
+<img src="C:panda.png" width="400" height="400">
 </a>
 <br>
 <h2>Interesting Facts About Pandas: </h2>
