--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <h2><a href="about.html"> About Us, </a> 
 <a href="followus.html"> Follow Us </a> </h2>
 <br>
-<a target=”_blank”  href= "https://origami.me/camel/">
+<a target=”_blank”  href= "https://origami.me/Camel/">
 <img src="C:\Users\sankk\Downloads\camel.png" width="400" height="400">
 </a>
 <br>
@@ -23,7 +23,7 @@
 <li>Camels can completely shut their nostrils during sandstorms. </li>
 </h3>
 </ul>
-<a target=”_blank”  href= "https://origami.me/panda/">
+<a target=”_blank”  href= "https://origami.me/Panda/">
 <img src="C:\Users\sankk\Downloads\panda.png" width="400" height="400">
 </a>
 <br>
