--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
  <h1>Origami Designs</hl>
 <br>
- <h2><a href="about.html"> About Us, </a> 
+ <h2><a href="file:///C:/Users/sankk/Downloads/aboutus.html"> About Us, </a> 
 <a href="followus.html"> Follow Us </a> </h2>
 <br>
 <a target=”_blank”  href= "https://origami.me/Camel/">
